--- a/samples/app12-flutter-appauth/app12/pubspec.yaml
+++ b/samples/app12-flutter-appauth/app12/pubspec.yaml
@@ -31,7 +31,8 @@ dependencies:
   flutter:
     sdk: flutter
   go_router: ^11.1.2
-
+  flutter_appauth: ^6.0.2
+  uuid: ^4.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
