--- a/samples/app12-flutter-appauth/app12/pubspec.yaml
+++ b/samples/app12-flutter-appauth/app12/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   go_router: ^11.1.2
   flutter_appauth: ^6.0.2
   uuid: ^4.1.0
+  shared_preferences: ^2.2.1
+  flutter_secure_storage: ^9.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
