--- a/samples/app12-flutter-appauth/app12/.gitignore
+++ b/samples/app12-flutter-appauth/app12/.gitignore
@@ -42,3 +42,8 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+/CREATE_ANDROID_KEYSTORE.sh
+/output.zip
+/android/key.properties
+/android/app/upload-keystore.jks
