--- a/samples/app12-flutter-appauth/app12/pubspec.yaml
+++ b/samples/app12-flutter-appauth/app12/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.0+4
 
 environment:
   sdk: '>=3.1.2 <4.0.0'
@@ -35,6 +35,7 @@ dependencies:
   uuid: ^4.1.0
   shared_preferences: ^2.2.1
   flutter_secure_storage: ^9.0.0
+  package_info_plus: ^4.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
