--- a/samples/app12-flutter-appauth/app12/pubspec.yaml
+++ b/samples/app12-flutter-appauth/app12/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+5
+version: 1.0.0+6
 
 environment:
   sdk: '>=3.1.2 <4.0.0'
@@ -37,6 +37,7 @@ dependencies:
   flutter_secure_storage: ^9.0.0
   package_info_plus: ^4.1.0
   http: ^1.1.0
+  url_launcher: ^6.1.14
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
