scope profile added

--- a/samples/app4-apache2-httpd-oidc/apache2/conf/httpd.conf
+++ b/samples/app4-apache2-httpd-oidc/apache2/conf/httpd.conf
@@ -555,7 +555,7 @@ SSLRandomSeed connect builtin
 
 OIDCProviderMetadataURL https://id.dev.sonia.de/realms/dev/.well-known/openid-configuration
 OIDCRedirectURI /protected
-OIDCScope "openid phone email"
+OIDCScope "openid phone email profile"
 OIDCClientID app4
 OIDCClientSecret MfLtfeFKkvorZ6GY1Z6wpiLDn5vHP3Ue
 OIDCCryptoPassphrase MySuperSecretPassphrase
