--- a/samples/app10-springboot32-oauth2/data/config/application.yml
+++ b/samples/app10-springboot32-oauth2/data/config/application.yml
@@ -17,11 +17,14 @@ spring:
   thymeleaf:
     cache: false
     
-server: 
+server:
   port: 8090
   servlet: 
     context-path: /
   tomcat:
+    remoteip:
+      protocol-header: X-Forwarded-Proto
+      port-header: X-Forwarded-Port
     basedir: data/tomcat
     accesslog:
       enabled: true
