--- a/samples/work-in-progress/app6-springboot3-saml2/app6-springboot3-saml2/pom.xml
+++ b/samples/work-in-progress/app6-springboot3-saml2/app6-springboot3-saml2/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.3.4</version>
+    <version>3.3.1</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
 
@@ -16,8 +16,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <exec.mainClass>l9g.app6.sb3.saml2.App6Springboot3Saml2</exec.mainClass>
- 
+    <exec.mainClass>l9g.app6.sb3.saml2.App6Springboot3Saml2</exec.mainClass> 
     <java.version>17</java.version>
     <!-- Additional variables dealing with build.properties -->
     <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss</maven.build.timestamp.format>
@@ -78,6 +77,12 @@
       <groupId>org.webjars</groupId>
       <artifactId>bootstrap</artifactId>
       <version>5.3.3</version>
+    </dependency>
+  
+    <dependency>
+      <groupId>org.bouncycastle</groupId>
+      <artifactId>bcprov-lts8on</artifactId>
+      <version>2.73.6</version>
     </dependency>
   
   </dependencies>
