--- a/lessons/l9g-php-native-oidc/Dockerfile
+++ b/lessons/l9g-php-native-oidc/Dockerfile
@@ -1,5 +1,14 @@
 FROM php:8.2-apache
-RUN docker-php-ext-install pdo pdo_mysql
-COPY . /var/www/html/
+
 WORKDIR /var/www/html
-EXPOSE 80
+
+RUN apt-get update && apt-get install -y libzip-dev unzip \
+    && docker-php-ext-install pdo pdo_mysql zip \
+    && pecl install redis \
+    && docker-php-ext-enable redis \
+    && a2enmod rewrite \
+    && sed -i 's/AllowOverride None/AllowOverride All/' /etc/apache2/apache2.conf
+
+RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+
+EXPOSE 8081
