--- a/lessons/l9g-php-native-oidc/docker-compose.yml
+++ b/lessons/l9g-php-native-oidc/docker-compose.yml
@@ -1,12 +1,20 @@
-
 services:
   app1-php:
     build: .
+    hostname: app1.dev.sonia.de
     ports:
-      - "8081:80"
+      - "8081:8081"
     volumes:
       - .:/var/www/html
-      
+      - ./000-default.conf:/etc/apache2/sites-available/000-default.conf
+      - ./ports.conf:/etc/apache2/ports.conf
+
+  app1-redis:
+    image: redis:alpine
+    hostname: app1-redis
+    ports:
+      - "6379:6379"
+
 networks:
   default:
     name: iddev
