--- a/lessons/l9g-webapp-native-oidc/src/main/resources/application.yaml
+++ b/lessons/l9g-webapp-native-oidc/src/main/resources/application.yaml
@@ -5,6 +5,9 @@ spring:
     active: default
   config:
     import: optional:file:config.yaml
+  messages:
+    basename: messages
+    encoding: UTF-8
 
 logging:
   pattern:
