--- a/keycloak/docker-compose.yml
+++ b/keycloak/docker-compose.yml
@@ -24,7 +24,7 @@ services:
       - "3636:3636"
 
   kcdb:
-    image: postgres:12
+    image: postgres:16
     restart: always
     container_name: kcdb
     environment:
@@ -38,7 +38,7 @@ services:
       - type: tmpfs
         target: /var/lib/postgresql/data/pg_stat_tmp
         tmpfs:
-          size: 268435456
+          size: 1073741824
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U keycloak"]
       interval: 5s
@@ -46,10 +46,10 @@ services:
       retries: 5
 
   keycloak:
-    image: quay.io/keycloak/keycloak:26.0
+    image: quay.io/keycloak/keycloak:26.1
     restart: always
     container_name: keycloak
-    command: "start --debug --log-level=INFO,org.apache.http:DEBUG,org.keycloak.services.managers:DEBUG,l9g:TRACE,org.hibernate:INFO,org.keycloak.transaction:INFO,org.keycloak.saml:TRACE,org.keycloak.protocol.oidc:TRACE"
+    command: "start --debug --log-level=INFO,org.apache.http:DEBUG,org.keycloak.services.managers:DEBUG,l9g:TRACE,org.hibernate:INFO,org.keycloak.transaction:INFO,org.keycloak.saml:TRACE,org.keycloak.protocol.oidc:TRACE --spi-theme-welcome-theme=KSE --spi-theme-static-max-age=-1 --spi-theme-cache-themes=false --spi-theme-cache-templates=false"
     environment:
       - KEYCLOAK_ADMIN=admin
       - KEYCLOAK_ADMIN_PASSWORD=admin123
@@ -104,15 +104,31 @@ services:
       keycloak:
         condition: service_healthy
 
-  kcmailhog:
-    build: build/mailhog
-    container_name: kcmailhog
+#  kcmailhog:
+#    build: build/mailhog
+#    container_name: kcmailhog
+#    restart: always
+#    ports:
+#      - "1025:1025"
+#      - "8025:8025"
+#    environment:
+#      - TZ=Europe/Berlin
+
+  kcmailpit:
+    image: axllent/mailpit
+    container_name: kcmailpit
     restart: always
+    volumes:
+      - ./kcmailpit:/data
     ports:
-      - "1025:1025"
-      - "8025:8025"
+      - 8025:8025
+      - 1025:1025
     environment:
-      - TZ=Europe/Berlin
+      MP_MAX_MESSAGES: 5000
+      MP_DATABASE: /data/mailpit.db
+      MP_SMTP_AUTH_ACCEPT_ANY: 1
+      MP_SMTP_AUTH_ALLOW_INSECURE: 1
+      TZ: Europe/Berlin
 
 networks:
   default:
